--- a/vignettes/tutorial.Rmd
+++ b/vignettes/tutorial.Rmd
@@ -17,3 +17,15 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(test.package)
 ```
+
+Demo `square`:
+
+```{r}
+square(1:3)
+```
+
+To include plots:
+
+```{r, echo=FALSE}
+plot(1:10, square(1:10))
+```
